--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,18 @@
 {
-  "name": "corcel/acf",
-  "description": "Advanced Custom Field (ACF) plugin for Corcel",
-  "homepage": "http://github.com/corcel/acf",
+  "name": "benjaminniess/corcel-acf",
+  "description": "[FORK] Advanced Custom Field (ACF) plugin for Corcel",
+  "homepage": "https://github.com/benjaminniess/corcel-acf",
   "license": "MIT",
   "authors": [
     {
-      "name": "Junior Grossi",
-      "email": "juniorgro@gmail.com",
-      "homepage": "http://jgrossi.com"
+      "name": "Benjamin Niess",
+      "email": "benjamin@web-id.fr",
+      "homepage": "https://web-id.fr"
     }
   ],
   "require": {
-    "php": ">=7.2",
-    "jgrossi/corcel": "^4.0|^5.0"
+    "php": ">=8.1",
+    "benjaminniess/corcel": "^7.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.4|^9.0"
